--- a/mnist_classification/requirements.txt
+++ b/mnist_classification/requirements.txt
@@ -1,8 +1,8 @@
 numpy
-tensorflow==2.8.0
+tensorflow
 streamlit
 Pillow
 streamlit-drawable-canvas
-opencv-python-headless>=4.5.3
+opencv-python-headless
 requests
 streamlit-lottie
